# oxo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
scripts/: refresh-compile-command.sh
src/: acceptor.c  circular_buffer.c  client.c  common.h  diagnose.c  io.h  io_epoll.c  io_kqueue.c  main.c  net.c  proxy.c  proxy.h  proxy_timer.c  state_machine.c  util.c  watcher_handler.c
src/client/: main.c  socks.c
src/server/: main.c
test/: test_proxy.py
